testsuite/tests/typecheck/should_fail/T17594c.hs
{-# LANGUAGE TypeAbstractions #-}
module T17594c where

id' :: forall a. [a]
id' = [\ @t -> undefined :: t]
